fix bug preventing user from submitting when footer overlaps button

--- a/client/styles/shared.css
+++ b/client/styles/shared.css
@@ -29,7 +29,6 @@ nav {
 	cursor: pointer;
 }
 footer {
-	width: calc(100% - 40px);
 	padding: 20px;
 	position: absolute;
 	bottom: 0;
